Another fix to the footer and changing the color of before and after of the photos on mobile devices

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -80,7 +80,7 @@ footer {
   background-size: 800px;
   background-color: #050505;
   width: 100%;
-  position: absolute;
+  position: relative;
   left: 0;
   bottom: 0;
   overflow: hidden;
@@ -94,7 +94,7 @@ footer .row-info {
 footer .row-copyright-social {
   width: 100%;
   padding: 0px 30px 0px 30px;
-  margin: 0px 0px 0px 0px;
+  margin: 0px 0px 20px 0px;
   height: 65px;
 }
 
